# kaayko-paddle-intelligence

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_READY.md  LICENSE  README.md  README.txt  get_paddlingout_scores.py  kaayko_production_inference.py  pyproject.toml  requirements-advanced.txt  requirements-dev.txt  requirements.txt  working_comparison_ui.py
.github/workflows/: ci.yml
data-collection/: .env.example  README.md  quick_start.sh  requirements.txt
data-collection/config/: collection_config.py
data-collection/examples/: collection_example.py  global_lakes_sample.csv
data-collection/output/: .gitkeep
data-collection/output/collected_data/: .gitkeep
data-collection/output/coordinates/: .gitkeep
data-collection/scripts/: generate_global_lakes.py  hydrolakes_collector.py  interactive_collector.py  kaaykokollect.py  rate_limited_collector.py  utils_ansi.py
docs/: ADVANCED_INTEGRATION_SUMMARY.md  ARCHITECTURE_OVERVIEW.md  CLEAN_REPO_SUMMARY.md  CURRENT_WORKING_SYSTEM.md  DOCUMENTATION_INDEX.md  MODEL_CLARIFICATION.md  api-reference.md  data-collection.md  deployment.md  getting-started.md  model-training.md
examples/: predict_paddle_conditions.py
kaayko/: 04_inference_router.py  __init__.py  exceptions.py  kaayko_inference_system.py  models.py  predictor.py
kaayko_training_suite/: __init__.py  config.py  data_integrity.py  ml_training.py
models/: README.md  model_metadata.json  random_forest_model.pkl  ridge_regression_model.pkl  scaler.pkl
sample_data/Lake_Mead/: 2019-04.csv  2021-09.csv  2024-01.csv
sample_data/Lake_Michigan/: 2020-06.csv  2022-11.csv  2023-03.csv
sample_data/Lake_Minnewanka/: 2019-08.csv  2021-02.csv  2024-07.csv
sample_data/Lake_Murray/: 2020-01.csv  2022-05.csv  2024-10.csv
sample_data/Washoe_Lake/: 2019-05.csv  2021-10.csv  2023-12.csv
sample_data/West_Lake/: 2020-03.csv  2022-08.csv  2024-04.csv
sample_data/Windermere/: 2019-12.csv  2021-07.csv  2023-04.csv
sample_data/Yellowstone_Lake/: 2020-09.csv  2022-02.csv  2024-06.csv
src/: .gitignore  README.md  kaayko_cache_manager_v3.py  kaayko_config_v2.py  kaayko_core_v2.py  kaayko_inference_v2.py  kaayko_trainer_superior_v1.py  kaayko_trainer_superior_v2.py  kaayko_trainer_superior_v3.py  requirements.txt
src/models/: kaayko_model_v2_histgradient_20250902_055721.joblib
tests/: test_model_real_paddlingout.py  test_predictor.py
training/: taxonomy.py  train_model_fixed.py  utils_ansi.py
training/advanced/: kaayko_production_training_suite.py
